# bazel-regex

./: .bazelignore  .gitignore  .pre-commit-config.yaml  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  re.bzl
.github/workflows/: ci.yaml  release_prep.sh
docs/: BUILD.bazel  MODULE.bazel  re.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  check_re.bzl
lib/: BUILD.bazel
lib/benchmarks/: BUILD.bazel  benchmark_test.bzl  benchmarks.bzl
lib/private/: BUILD.bazel  compiler.bzl  constants.bzl  re.bzl  vm.bzl
lib/tests/: BUILD.bazel  test_anchors_flags.bzl  test_api.bzl  test_core.bzl  test_escape.bzl  test_groups.bzl  test_optimization.bzl  test_quantifiers.bzl  utils.bzl
re/: re.bzl
re/private/: compiler.bzl  constants.bzl  re.bzl  vm.bzl
re/tests/: BUILD.bazel  test_anchors.bzl  test_anchors_flags.bzl  test_api.bzl  test_core.bzl  test_escape.bzl  test_flags.bzl  test_groups.bzl  test_optimization.bzl  test_quantifiers.bzl  test_root_import.bzl  test_ungreedy_opt.bzl  test_unicode.bzl  test_verbose.bzl  utils.bzl
re/tests/benchmarks/: BUILD.bazel  benchmark_test.bzl  benchmarks.bzl
tests/: test_anchors_flags.star  test_api.star  test_core.star  test_escape.star  test_groups.star  test_lookaround.star  test_quantifiers.star  tests.star  utils.star
