"""
Bazel module definition for the Starlark regex engine.
"""

module(
    name = "re.bzl",
    version = "0.1.0",
)

bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)
